add padding only at the bottom

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -11,7 +11,8 @@
 html {
     height: 100%;
     margin: 0;
-    padding: 25px;
+    padding: 0;
+    padding-bottom: 1em;
 }
 body {
     margin: 0;
